swapped to ngModule for app root due to performance issues

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
     </script>
   </head>
   <body class="max-w-screen">
-    <app-root></app-root>
+    <app-component></app-component>
     <noscript>Please enable JavaScript to continue using this application.</noscript>
   </body>
 </html>
